Урок 11. Добавил возможность добавления заметки и полной очистки всего списка.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="description4">Эпоксидная смола</string>
     <string name="description5">Резьба по камню</string>
 
+    <string name="add">Добавить</string>
+    <string name="clear">Очистить</string>
+
 </resources>
