--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="add">Добавить</string>
     <string name="clear">Очистить</string>
 
+    <string name="update">Изменить</string>
+    <string name="delete">Удалить</string>
+
 </resources>
