--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
 
     <string name="update">Изменить</string>
     <string name="delete">Удалить</string>
+    <string name="save">Сохранить</string>
 
 </resources>
